kubernetes/apps/kube-system/traefik-dashboard/app/Middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basicauth
  namespace: kube-system
spec:
  basicAuth:
    secret: traefik-dashboard-auth
